--- a/paintingSections.html
+++ b/paintingSections.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paintig Sections</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/output.css">
 </head>
 <body class="bg-white text-gray-800 font-sans antialiased sm:m-auto">
 
