--- a/paintingSections.html
+++ b/paintingSections.html
@@ -17,7 +17,7 @@
     <section class="max-w-5xl mx-auto p-6 min-h-screen flex flex-col justify-center">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full">
 
-            <a href="faseDeLunas.html" class="bg-gray-200 aspect-square md:aspect-auto md:h-80 bg-block-gray hover:bg-block-hover transition-all duration-300 transform hover:-translate-y-1 rounded-lg flex flex-col justify-center items-center gap-4 shadow-sm group">
+            <a href="estaciones.html" class="bg-gray-200 aspect-square md:aspect-auto md:h-80 bg-block-gray hover:bg-block-hover transition-all duration-300 transform hover:-translate-y-1 rounded-lg flex flex-col justify-center items-center gap-4 shadow-sm group">
                 <i class="fas fa-pen-nib text-5xl text-gray-500 group-hover:text-gray-800 transition"></i>
                 <h2 class="font-serif text-2xl uppercase tracking-widest group-hover:font-bold">FASE DE LUNAS</h2>
             </a>
