--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                 <h2 class="font-serif text-2xl uppercase tracking-widest text-white font-bold drop-shadow-md">Escritura</h2>
             </a>
 
-            <a href="paintingSections.html" class="bg-gray-200 aspect-square md:aspect-auto md:h-80 bg-block-gray hover:bg-block-hover transition-all duration-300 transform hover:-translate-y-1 rounded-lg flex flex-col justify-center items-center gap-4 shadow-sm group">
-                <i class="fas fa-palette text-5xl text-gray-600 group-hover:text-gray-800 transition"></i>
+            <a href="paintingSections.html" class="relative overflow-hidden aspect-square md:aspect-auto md:h-80 rounded-lg flex flex-col justify-center items-center gap-4 shadow-sm group
+                bg-[url('https://images.unsplash.com/photo-1638064867513-41bf58471ac3?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] 
+                bg-cover bg-center bg-gray-700 bg-blend-overlay hover:bg-gray-600 transition-all duration-300 transform hover:-translate-y-1">
                 <h2 class="font-serif text-2xl uppercase tracking-widest group-hover:font-bold">Pintura</h2>
             </a>
 
