--- a/writing.html
+++ b/writing.html
@@ -1,41 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESCRITURA</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="src/output.css">
 </head>
+
 <body class="bg-white text-gray-800 font-sans antialiased">
 
-    <nav class="sticky top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-100 py-4 px-6 flex justify-between items-center">
+    <nav
+        class="sticky top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-100 py-4 px-6 flex justify-between items-center">
         <a href="index.html" class="font-bold text-xl tracking-widest hover:text-gray-600">LUNAS</a>
         <div class="flex gap-4 text-xl text-gray-700">
-            <a href="https://www.instagram.com/_adrilunas" target="_blank"><i class="fab fa-instagram hover:text-pink-600 transition"></i></a>
+            <a href="https://www.instagram.com/_adrilunas" target="_blank"><i
+                    class="fab fa-instagram hover:text-pink-600 transition"></i></a>
         </div>
     </nav>
 
     <section class="max-w-4xl mx-auto p-6 py-12">
-        <a href="index.html" class="mb-8 inline-block text-gray-500 hover:text-black underline text-sm">← Volver al inicio</a>
-        
+        <a href="index.html" class="mb-8 inline-block text-gray-500 hover:text-black underline text-sm">← Volver al
+            inicio</a>
+
         <h2 class="font-serif text-4xl mb-10 text-center">Publicaciones</h2>
-        
+
         <div class="bg-gray-50 p-8 rounded-xl shadow-sm border border-gray-100 flex flex-col md:flex-row gap-8">
             <div class="w-full md:w-1/3 shrink-0">
-                <img src="" alt="Portada Libro" class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500">
+                <img src="https://res.cloudinary.com/di1ujwvir/image/upload/v1768253920/2a7487fb-3a45-48b2-a627-f70804f89479_lxoy7p.jpg"
+                    alt="Portada Libro"
+                    class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500">
             </div>
             <div class="w-full md:w-2/3 flex flex-col justify-center">
                 <div class="mb-4">
-                    <span class="bg-orange-100 text-orange-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Novela</span>
+                    <span
+                        class="bg-orange-100 text-orange-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Poesía
+                    </span>
                 </div>
                 <h3 class="font-serif text-3xl font-bold mb-2">Fases de Luna</h3>
                 <p class="text-gray-700 leading-relaxed mb-6">
-                    Sinopsis de tu libro...
+                    “Un viaje íntimo por los sentimientos que no siempre sabemos nombrar.”<br>
+                    “Escribo para entenderme. Y quizá para que tú te entiendas.”
                 </p>
+                <div class="flex w-full gap-10 ml-4 justify-center">
+                    <a href="https://autografia.es/product/fase-de-lunas/" target="_blank"
+                        class="bg-orange-100 text-orange-900 font-bold py-2 px-6 rounded hover:bg-orange-200 transition shadow-sm">
+                        Comprar Ahora
+                    </a>
+
+                    <a href="Fase de Lunas Vista previa.pdf" target="_blank"
+                        class="bg-orange-100 text-orange-900 font-bold py-2 px-6 rounded hover:bg-orange-200 transition shadow-sm">
+                        Vista Previa
+                    </a>
+                </div>
             </div>
         </div>
     </section>
 
 </body>
+
 </html>
