--- a/writing.html
+++ b/writing.html
@@ -8,51 +8,52 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400&display=swap"
         rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/output.css">
 </head>
 
-<body class="bg-white text-gray-800 font-sans antialiased">
+<body class="bg-black text-gray-200 font-sans antialiased">
 
     <nav
-        class="sticky top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-100 py-4 px-6 flex justify-between items-center">
-        <a href="index.html" class="font-bold text-xl tracking-widest hover:text-gray-600">LUNAS</a>
-        <div class="flex gap-4 text-xl text-gray-700">
+        class="sticky top-0 z-50 bg-black/90 backdrop-blur-sm border-b border-gray-800 py-4 px-6 flex justify-between items-center">
+        <a href="index.html" class="font-bold text-xl tracking-widest text-white hover:text-gray-300 transition">LUNAS</a>
+        <div class="flex gap-4 text-xl text-gray-400">
             <a href="https://www.instagram.com/_adrilunas" target="_blank"><i
-                    class="fab fa-instagram hover:text-pink-600 transition"></i></a>
+                    class="fab fa-instagram hover:text-pink-500 transition"></i></a>
         </div>
     </nav>
 
     <section class="max-w-4xl mx-auto p-6 py-12">
-        <a href="index.html" class="mb-8 inline-block text-gray-500 hover:text-black underline text-sm">← Volver al
+        <a href="index.html" class="mb-8 inline-block text-gray-400 hover:text-white underline text-sm transition">← Volver al
             inicio</a>
 
-        <h2 class="font-serif text-4xl mb-10 text-center">Publicaciones</h2>
+        <h2 class="font-serif text-4xl mb-10 text-center text-white">Publicaciones</h2>
 
-        <div class="bg-gray-50 p-8 rounded-xl shadow-sm border border-gray-100 flex flex-col md:flex-row gap-8">
+        <div class="bg-gray-900 p-8 rounded-xl shadow-lg border border-gray-800 flex flex-col md:flex-row gap-8">
             <div class="w-full md:w-1/3 shrink-0">
                 <img src="https://res.cloudinary.com/di1ujwvir/image/upload/v1768253920/2a7487fb-3a45-48b2-a627-f70804f89479_lxoy7p.jpg"
                     alt="Portada Libro"
-                    class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500">
+                    class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500 border border-gray-700">
             </div>
             <div class="w-full md:w-2/3 flex flex-col justify-center">
                 <div class="mb-4">
                     <span
-                        class="bg-orange-100 text-orange-800 text-xs font-bold px-3 py-1 rounded-full uppercase">Poesía
+                        class="bg-orange-900/50 text-orange-200 border border-orange-700/50 text-xs font-bold px-3 py-1 rounded-full uppercase">Poesía
                     </span>
                 </div>
-                <h3 class="font-serif text-3xl font-bold mb-2">Fases de Luna</h3>
-                <p class="text-gray-700 leading-relaxed mb-6">
+                <h3 class="font-serif text-3xl font-bold mb-2 text-white">Fases de Luna</h3>
+                <p class="text-gray-300 leading-relaxed mb-6">
                     “Un viaje íntimo por los sentimientos que no siempre sabemos nombrar.”<br>
                     “Escribo para entenderme. Y quizá para que tú te entiendas.”
                 </p>
-                <div class="flex w-full gap-10 ml-4 justify-center">
+                <div class="flex w-full gap-4 ml-0 md:ml-4 justify-center md:justify-start flex-wrap">
                     <a href="https://autografia.es/product/fase-de-lunas/" target="_blank"
-                        class="bg-orange-100 text-orange-900 font-bold py-2 px-6 rounded hover:bg-orange-200 transition shadow-sm">
+                        class="bg-orange-600 text-white font-bold py-2 px-6 rounded hover:bg-orange-500 transition shadow-md hover:shadow-orange-500/20">
                         Comprar Ahora
                     </a>
 
                     <a href="Fase de Lunas Vista previa.pdf" target="_blank"
-                        class="bg-orange-100 text-orange-900 font-bold py-2 px-6 rounded hover:bg-orange-200 transition shadow-sm">
+                        class="border border-orange-600 text-orange-500 font-bold py-2 px-6 rounded hover:bg-orange-900/30 transition shadow-sm">
                         Vista Previa
                     </a>
                 </div>
@@ -60,6 +61,7 @@
         </div>
     </section>
 
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
