zoomable en las imagenes

--- a/primavera.html
+++ b/primavera.html
@@ -34,8 +34,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/RLxcKvH.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/RLxcKvH.jpeg" alt="TU JARDIN"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -78,8 +78,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/3OvLG8K.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/3OvLG8K.jpeg" alt="TE DEJASTE EL PANTALÓN"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -116,8 +116,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/3qiEnIW.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/3qiEnIW.jpeg" alt="EL FARO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -156,8 +156,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/sEbkQVQ.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/sEbkQVQ.jpeg" alt="LOS OJOS DE QUIEN MIRA"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -193,8 +193,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/iBxFboE.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/iBxFboE.jpeg" alt="IRREVERENTE"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -241,8 +241,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/u7DDza9.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/u7DDza9.jpeg" alt="GERMINAR"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -282,8 +282,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/bsK5wPH.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/bsK5wPH.jpeg" alt="PÉTALOS DE AMOR"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -319,8 +319,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/QuUrc9E.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/QuUrc9E.jpeg" alt="LUCES DE NEÓN"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -361,8 +361,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/6UBfsRi.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/6UBfsRi.jpeg" alt="LA HORA DEL TÉ"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -403,8 +403,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/6Iv88ji.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/6Iv88ji.jpeg" alt="EN TU COCHE"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -440,6 +440,6 @@
 
         </section>
     </section>
+    <script src="lightbox.js"></script>
 </body>
-
 </html>
