--- a/verano.html
+++ b/verano.html
@@ -34,8 +34,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/G45zaCH.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/G45zaCH.jpeg" alt="CONTIGO SIENTO MARIPOSAS"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -72,8 +72,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/AvtTPsG.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/AvtTPsG.jpeg" alt="CONFLICTO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -123,8 +123,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/PNoKkQI.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/PNoKkQI.jpeg" alt="POR ROZARTE"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -162,8 +162,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/JBLjb9p.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/JBLjb9p.jpeg" alt="MUERTE DE UNA ESTACIÓN"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -200,8 +200,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/iFPrML1.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/iFPrML1.jpeg" alt="QUEBRADO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -252,8 +252,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/Rxltoal.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/Rxltoal.jpeg" alt="EL CUENTO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -292,8 +292,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/EP5PMzP.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/EP5PMzP.jpeg" alt="EL HOMBRE DEL SOMBRERO DE COPA"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -343,8 +343,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/AJ5bWbq.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/AJ5bWbq.jpeg" alt="FUEGO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -384,6 +384,6 @@
 
         </section>
     </section>
+    <script src="lightbox.js"></script>
 </body>
-
 </html>
