--- a/invierno.html
+++ b/invierno.html
@@ -18,7 +18,7 @@
         <a href="index.html" class="font-bold text-xl tracking-widest hover:text-gray-600">LUNAS</a>
         <div class="flex gap-4 text-xl text-gray-700">
             <a href="https://www.instagram.com/_adrilunas" target="_blank"><i
-                    class="fab fa-instagram hover:text-pink-600 transition"></i></a>
+                class="fab fa-instagram hover:text-pink-600 transition"></i></a>
         </div>
     </nav>
 
@@ -34,8 +34,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/huDE7YI.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/huDE7YI.jpeg" alt="RECUERDO"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -70,8 +70,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/ZiIkLKb.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/ZiIkLKb.jpeg" alt="ARBOLEDA"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -110,8 +110,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/XlllPRS.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/XlllPRS.jpeg" alt="RECUERDOS DE VOLAR"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -158,8 +158,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/5BsogKL.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/5BsogKL.jpeg" alt="ETERNA BÚSQUEDA"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -205,8 +205,8 @@
 
                 <div class="w-full md:w-5/12 shrink-0">
                     <div class="aspect-3/4 bg-gray-100 overflow-hidden rounded-sm shadow-sm">
-                        <img src="https://i.imgur.com/S5bDXcR.jpeg" alt="Nombre del cuadro"
-                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700">
+                        <img src="https://i.imgur.com/S5bDXcR.jpeg" alt="AGARRAME"
+                            class="w-full h-full object-cover hover:scale-105 transition-transform duration-700 zoomable">
                     </div>
                 </div>
 
@@ -245,5 +245,6 @@
 
         </section>
     </section>
+    <script src="lightbox.js"></script>
 </body>
 </html>
