--- a/writing.html
+++ b/writing.html
@@ -33,7 +33,7 @@
             <div class="w-full md:w-1/3 shrink-0">
                 <img src="https://res.cloudinary.com/di1ujwvir/image/upload/v1768253920/2a7487fb-3a45-48b2-a627-f70804f89479_lxoy7p.jpg"
                     alt="Portada Libro"
-                    class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500 border border-gray-700">
+                    class="w-full rounded shadow-xl transform -rotate-2 hover:rotate-0 transition duration-500 border border-gray-700 zoomable">
             </div>
             <div class="w-full md:w-2/3 flex flex-col justify-center">
                 <div class="mb-4">
@@ -62,6 +62,7 @@
     </section>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="lightbox.js"></script>
 </body>
 
 </html>
